--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,21 @@
 
 UNRELEASED:
 
+Version: 3.48.0, Date: 2019-05-28
+- Update translations
+- Fixed an issue with the AdBlock tab in the Chrome developer tools
+- Added Edge detection logic to the telemetry data
+- Updated the icons, including the inclusion of the material design icons
+- Changed the tab functionality on the AdBlock Options page to a menu style layout
+- Fixed a JavaScript error in the user enabled filter list data collection processing
+
+Version: 3.47.0, Date: 2019-05-20
+- Removed unused files from the build
+- Updated the ping processing to include parameters as to which Theme the user has enabled
+- Removed duplicate log server messages
+- Updated the 'MyAdBlock' message in the popup menu
+- Update translations
+
 Version: 3.46.0, Date: 2019-04-22
 - Show the /update page to let users know what features have been updated in the last 6 months.
 
