--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -7,6 +7,10 @@
     "message":"L'extensió més popular de Chrome, amb més de 60 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
   "name_releasebuild":{
     "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
     "message":"L'AdBlock"
@@ -1869,6 +1873,14 @@
     "message":"Activa el MyAdBlock",
     "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
+  "adblockprotectenrollmentbutton":{
+    "message":"Proveu-ho ara: És gratis",
+    "description":"The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
+  },
+  "adblockprotectenrollmenttext":{
+    "message":"Manteniu la vostra informació personal segura amb l'AdBlock Protect",
+    "description":"The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
+  },
   "myadblockoptionspageheader":{
     "message":"Opcions del MyAdBlock",
     "description":"The text of the header the MyAdBlock Options page"
@@ -1917,8 +1929,188 @@
     "message":"Hem fet canvis a l'AdBlock!",
     "description":"Link to Options page with more information about the changes."
   },
+  "new_myadblock_feature_available":{
+    "message":"Feu clic aquí per desbloquejar noves funcions!",
+    "description":"The text in the popup menu item saying there is a new MyAdBlock feature and takes you to the MyAdBlock tab in the option page."
+  },
+  "images_coming_soon":{
+    "message":"Pròximament més fotos!",
+    "description":"The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
+  },
+  "myadblock_pic_replacemenet_description":{
+    "message":"Substitueix anuncis amb imatges que us agraden",
+    "description":"The text briefly describing what the feature does in the MyAdBlock tab in the option page."
+  },
+  "myadblock_payment_not_available_title":{
+    "message":"Vaja! No hem pogut connectar-nos als nostres servidors",
+    "description":"The title of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_payment_not_available_text":{
+    "message":"Estem molt contents que estigueu interessat en el MyAdBlock! Malauradament, no podem processar els pagaments en aquest moment. Proveu-ho més tard.",
+    "description":"The text of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
   "myadblock_options_page_header":{
     "message":"MyAdBlock",
     "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblock_picreplacement_exlained":{
+    "message":"Seleccioneu una de les categories següents i l'AdBlock reemplaçarà ocasionalment els anuncis amb imatges d'alta qualitat per alegrar-vos el dia.",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "error_msg_header":{
+    "message":"Vaja! El menú de l'AdBlock ha tingut problemes per carregar-se.",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help_us":{
+    "message":"Ajudeu-nos a resoldre aquest problema enviant-nos algunes dades de depuració: Feu clic a ",
+    "description":"DO NOT TRANSLATE"
+  },
+  "error_msg_thank_you":{
+    "message":"Gràcies",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_reload":{
+    "message":"A continuació, proveu de tornar a carregar l'extensió: Feu clic a ",
+    "description":"DO NOT TRANSLATE"
+  },
+  "error_msg_help":{
+    "message":"Si això no funciona, consulteu aquí per obtenir més ajuda: Feu clic a ",
+    "description":"DO NOT TRANSLATE"
+  },
+  "error_msg_here":{
+    "message":"aquí",
+    "description":"DO NOT TRANSLATE"
+  },
+  "generaloptions2":{
+    "message":"Opcions generals",
+    "description":"Title of one of the Options page tabs"
+  },
+  "debuginlogoption2":{
+    "message":"Mostra les instruccions de depuració al registre de la consola",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "slows_down_extension":{
+    "message":"retarda l'extensió",
+    "description":"Text of an option telling users that the option slows down the extension"
+  },
+  "enter_url":{
+    "message":"introduïu una URL",
+    "description":"Placeholder text in the Custom Filter list URL bar"
+  },
+  "filterantisocial2":{
+    "message":"Llista de filtres antisocials",
+    "description":"A filter list"
+  },
+  "filter_antisocial_explained":{
+    "message":"elimina els botons de les xarxes socials",
+    "description":"A filter list explaination"
+  },
+  "filterannoyances2":{
+    "message":"Fanboy's Annoyances",
+    "description":"A filter list"
+  },
+  "filter_annoyances_explained":{
+    "message":"bloqueja les finestres emergents a la pàgina, les xarxes socials i els ginys relacionats, i altres molèsties",
+    "description":"A filter list explaination"
+  },
+  "filterwarning_removal2":{
+    "message":"Llista d'eliminació d'advertència de bloqueig d'anuncis",
+    "description":"A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
+  },
+  "filter_warning_removal_explained":{
+    "message":"elimina les advertències sobre l'ús de bloquejadors d'anuncis",
+    "description":"A filter list explaination"
+  },
+  "filterlistsrock2":{
+    "message":"Les llistes de filtres bloquegen la majoria dels anuncis al web. També podeu...",
+    "description":"Header text on the Customize tab"
+  },
+  "blockmoreads2":{
+    "message":"Bloqueja més anuncis",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "stop_blocking_ads2":{
+    "message":"Atura el bloqueig d'anuncis",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit2":{
+    "message":"Edita manualment els vostres filtres",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualexcludefilteredit2":{
+    "message":"Edita els filtres desactivats",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "filtersavewarning_part1":{
+    "message":"Aneu amb compte: si cometeu un error aquí, molts altres filtres, inclosos els filtres oficials, també podrien malmetre's!",
+    "description":"Warning when manually editing filters -- first part not clickable."
+  },
+  "filtersavewarning_part2":{
+    "message":"Llegiu el [[tutorial de sintaxi de filtres]] per saber com afegir filtres avançats de llista negra i llista blanca.",
+    "description":"Warning when manually editing filters -- second part clickable."
+  },
+  "pwyw2":{
+    "message":"Pagueu el que desitgeu!",
+    "description":"Text of a payment request link"
+  },
+  "translator_credit2":{
+    "message":"La traducció al català és gràcies a...",
+    "description":"This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
+  },
+  "selectlanguage2":{
+    "message":"seleccioneu l'idioma",
+    "description":"First option in the language dropdown menu on the Filter lists tab."
+  },
+  "allow_whitelisting_youtube_channels2":{
+    "message":"Permet llistes blanques de canals específics de YouTube ™",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "require_restart_browser":{
+    "message":"cal reiniciar el navegador",
+    "description":"Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes":{
+    "message":"Temes",
+    "description":"A tab on the Options page"
+  },
+  "themes":{
+    "message":"Themes",
+    "description":"Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme":{
+    "message":"Tema del menú emergent",
+    "description":"Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme":{
+    "message":"Tema de la pàgina d'opcions",
+    "description":"Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon":{
+    "message":"Torneu aviat, properament hi haurà més temes!",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned":{
+    "message":"Estigueu atents",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header":{
+    "message":"Capçalera",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body":{
+    "message":"text del cos",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme":{
+    "message":"Per defecte",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme":{
+    "message":"Fosc",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme":{
+    "message":"Aplica el tema",
+    "description":"Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
