--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -2112,5 +2112,17 @@
   "apply_theme":{
     "message":"Apply Theme",
     "description":"Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
+  },
+  "adblock_twitter":{
+    "message":"AdBlock Twitter",
+    "description":"Title for link to AdBlock's Twitter account"
+  },
+  "adblock_facebook":{
+    "message":"AdBlock Facebook",
+    "description":"Title for link to AdBlock's Facebook account"
+  },
+  "adblock_website":{
+    "message": "AdBlock Home Page",
+    "description":"Title for link to AdBlock's website"
   }
 }
