--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1115,6 +1115,10 @@
     "message": "OK, puoi bloccare questa pubblicità nella pagina delle Opzioni. Grazie!",
     "description": "Telling users who won't report an ad to us how to handle it for themselves"
   },
+  "popup_menu_title": {
+    "message": "Menu popup AdBlock",
+    "description": "Title for the popup menu."
+  },
   "block_an_ad_on_this_page": {
     "message": "Blocca una pubblicità su questa pagina",
     "description": "Toolbar button menu entry and context menu entry"
@@ -2089,8 +2093,20 @@
     "message": "Torna presto, stanno arrivando altri temi!",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
   },
+  "more_themes_on_the_way": {
+    "message": "Altri temi in arrivo!",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "myadblock_themes_description": {
+    "message": "Cambia l'aspetto di AdBlock, inclusi la dimensione dei caratteri e lo schema dei colori",
+    "description": "Text briefly describing what themes do on the MyAdBlock tab of the Options page"
+  },
   "stay_tuned": {
     "message": "Seguici",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "support_to_unlock": {
+    "message": "Supporta per sbloccare",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
   },
   "header": {
@@ -2109,8 +2125,68 @@
     "message": "Scuro",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "watermelon_theme": {
+    "message": "Cocomero",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "solarized_theme": {
+    "message": "Solarizzato",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "ocean_theme": {
+    "message": "Oceano",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "sunshine_theme": {
+    "message": "Luce del sole",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Applica tema",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
+  },
+  "adblock_twitter": {
+    "message": "AdBlock su Twitter",
+    "description": "Title for link to AdBlock's Twitter account"
+  },
+  "adblock_facebook": {
+    "message": "AdBlock su Facebook",
+    "description": "Title for link to AdBlock's Facebook account"
+  },
+  "adblock_website": {
+    "message": "Home page di AdBlock",
+    "description": "Title for link to AdBlock's website"
+  },
+  "callout_new_feature": {
+    "message": "NUOVO!",
+    "description": "Text to callout a new feature"
+  },
+  "myadblock_short_description": {
+    "message": "Prova un AdBlock ampliato con nuove funzionalità divertenti in esclusiva per i donatori",
+    "description": "Text substitle of myAdBlock page in the options page"
+  },
+  "image_swap": {
+    "message": "Cambio immagine",
+    "description": "Title of the Image Swap sub-tab of the Options page"
+  },
+  "myadblock_subscribe_invite": {
+    "message": "Abbonati a MyAdBlock per sbloccare",
+    "description": "Text on hover of a locked MyAdBlock feature in the MyAdBlock tab of the Options page"
+  },
+  "myadblock_more_coming_soon": {
+    "message": "Altre funzioni in arrivo!",
+    "description": "Title of the teaser MyAdBlock feature box in the MyAdBlock tab of the Options page"
+  },
+  "myadblock_benefits_explained": {
+    "message": "In cambio del tuo sostegno attraverso l'attivazione di MyAdBlock, riceverai gli strumenti e le funzionalità più recenti al momento della loro pubblicazione.",
+    "description": "Main text of the teaser MyAdBlock feature in the MyAdBlock tab of the Options page"
+  },
+  "myadblock_payment_not_available_callout": {
+    "message": "Oh no!",
+    "description": "The text notifying something is wrong in the payment iframe in the Options page."
+  },
+  "myadblock_payment_not_available_subtitle": {
+    "message": "Non siamo riusciti a connetterci ai nostri server",
+    "description": "The sub-title of an error message box in payment iframe in the Options page."
   }
 }
