--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1115,6 +1115,10 @@
     "message": "Хорошо, тогда просто заблокируйте это объявление в Параметрах. Спасибо!",
     "description": "Telling users who won't report an ad to us how to handle it for themselves"
   },
+  "popup_menu_title": {
+    "message": "AdBlock Popup Menu",
+    "description": "Title for the popup menu."
+  },
   "block_an_ad_on_this_page": {
     "message": "Заблокировать объявление на этой странице",
     "description": "Toolbar button menu entry and context menu entry"
@@ -2089,8 +2093,20 @@
     "message": "Следите за нами, скоро будут еще темы!",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
   },
+  "more_themes_on_the_way": {
+    "message": "More themes on the way!",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "myadblock_themes_description": {
+    "message": "Change the way AdBlock looks, including font size and color scheme",
+    "description": "Text briefly describing what themes do on the MyAdBlock tab of the Options page"
+  },
   "stay_tuned": {
     "message": "Оставайтесь с нами",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "support_to_unlock": {
+    "message": "Support to unlock",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
   },
   "header": {
@@ -2109,8 +2125,68 @@
     "message": "Темная",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "watermelon_theme": {
+    "message": "Watermelon",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "solarized_theme": {
+    "message": "Solarized",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "ocean_theme": {
+    "message": "Ocean",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "sunshine_theme": {
+    "message": "Sunshine",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Применить тему",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
+  },
+  "adblock_twitter": {
+    "message": "AdBlock Twitter",
+    "description": "Title for link to AdBlock's Twitter account"
+  },
+  "adblock_facebook": {
+    "message": "AdBlock Facebook",
+    "description": "Title for link to AdBlock's Facebook account"
+  },
+  "adblock_website": {
+    "message": "AdBlock Home Page",
+    "description": "Title for link to AdBlock's website"
+  },
+  "callout_new_feature": {
+    "message": "НОВОЕ!",
+    "description": "Text to callout a new feature"
+  },
+  "myadblock_short_description": {
+    "message": "Experience an enhanced AdBlock with fun new features exclusively for donors",
+    "description": "Text substitle of myAdBlock page in the options page"
+  },
+  "image_swap": {
+    "message": "Image Swap",
+    "description": "Title of the Image Swap sub-tab of the Options page"
+  },
+  "myadblock_subscribe_invite": {
+    "message": "Subscribe to MyAdBlock to unlock",
+    "description": "Text on hover of a locked MyAdBlock feature in the MyAdBlock tab of the Options page"
+  },
+  "myadblock_more_coming_soon": {
+    "message": "Еще больше новых функций — скоро!",
+    "description": "Title of the teaser MyAdBlock feature box in the MyAdBlock tab of the Options page"
+  },
+  "myadblock_benefits_explained": {
+    "message": "In exchange for supporting us by enabling MyAdBlock, you'll get access to the latest tools and features as soon as they're released.",
+    "description": "Main text of the teaser MyAdBlock feature in the MyAdBlock tab of the Options page"
+  },
+  "myadblock_payment_not_available_callout": {
+    "message": "Oh No!",
+    "description": "The text notifying something is wrong in the payment iframe in the Options page."
+  },
+  "myadblock_payment_not_available_subtitle": {
+    "message": "We were unable to connect to our servers",
+    "description": "The sub-title of an error message box in payment iframe in the Options page."
   }
 }
